Bug 242799. Fix touchpad scrolling but keep support for screen reader behavior based on class names. r=ere, sr=roc