xpfe/appshell/src/nsAppShellService.cpp
@@ -833,6 +833,7 @@ nsAppShellService::JustCreateTopWindow(nsIXULWindow *aParent,
     if (aChromeMask & nsIWebBrowserChrome::CHROME_WINDOW_POPUP)
       widgetInitData.mWindowType = eWindowType_popup;
 
+    widgetInitData.mContentType = eContentTypeUI;                
     // note default chrome overrides other OS chrome settings, but
     // not internal chrome
     if (aChromeMask & nsIWebBrowserChrome::CHROME_DEFAULT)
